--- a/www/index.html
+++ b/www/index.html
@@ -854,9 +854,7 @@
                     else
                         this.show_logged_out_content(page);
 
-                    $('#belownav').fadeIn(1000, function () {
-                        this.refresh_content(window.location.hash);
-                    }.bind(this));
+                    $('#belownav').fadeIn(1000);
                     this.change_title(window.location.hash)
                     this.refresh_content(window.location.hash);
                 }.bind(this))
