--- a/www/reconnect.html
+++ b/www/reconnect.html
@@ -1,5 +1,5 @@
 <div class="row disconnected_content"
-    style="margin: 0px !important; z-index: 225; position:absolute; text-align:center; border:none !important; height:100%; width:100%;  overflow-y: auto; background-color: rgba(0., 0., 0., 0.);"
+    style="margin: 0px !important; z-index: 225; position:absolute; text-align:center; border:none !important; width:100%;  overflow-y: auto; background-color: rgba(0., 0., 0., 0.);"
     id="reconnect">
     <div class="col-0 col-sm-0 col-md-1 col-lg-2">
     </div>
