--- a/www/request.html
+++ b/www/request.html
@@ -1,6 +1,4 @@
-<div class="row connected_content"
-    style="margin: 0px !important; z-index: 20; position:absolute; text-align:center; border:none !important; width:100%;  overflow-y: auto;"
-    id="request">
+<div class="row connected_content" id="request">
     <div class="col-0 col-sm-0 col-md-1 col-lg-2">
     </div>
     <form class="col-12 col-sm-12 col-md-10 col-lg-8">
