--- a/www/logout.html
+++ b/www/logout.html
@@ -1,6 +1,4 @@
-<div class="row connected_content"
-    style="margin: 0px !important; z-index: 230; position:absolute; text-align:center; border:none !important; width:100%;  overflow-y: auto; background-color: rgba(0., 0., 0., 0.);"
-    id="logout">
+<div class="row connected_content" id="logout">
     <div class="col-0 col-sm-0 col-md-1 col-lg-2">
     </div>
     <div class="col-12 col-sm-12 col-md-10 col-lg-8">
