--- a/www/index.html
+++ b/www/index.html
@@ -495,6 +495,7 @@
                 case pages.DELETE_ACCOUNT:
                     this.refresh_captchas();
                     $("#menu").fadeIn(1000);
+                    $("#belownav").fadeIn(1000);
                     break;
                 case pages.PROFILE:
                     $("#menu").fadeIn(1000);
