--- a/www/index.html
+++ b/www/index.html
@@ -378,7 +378,7 @@
                 case pages.RECONNECT:
                     if($("#menu").css("display") != "none")
                         $("#menu").fadeOut(1000);
-                    $("#belownav").fadeOut(1000);
+                    $("#belownav").fadeIn(1000);
                     break;
                 case pages.PROCESSING:
                     if($("#menu").css("display") != "none")
