--- a/www/index.html
+++ b/www/index.html
@@ -257,6 +257,7 @@
             }
             else if (proto.type == Message.Type.SET_PASSWORD) {
                 this.hide_popovers();
+                this.show_page(pages.RESET);
             }
             else if (proto.type == Message.Type.HALT) {
                 this.show_page(pages.PROCESSING, proto.message, proto.details, false);
