--- a/www/index.html
+++ b/www/index.html
@@ -794,7 +794,7 @@
             else if(page != pages.RESET)
             {
                 window.location.hash = page;
-                this.refresh_content(window.location.hash);
+                this.refresh_content(page);
             }
         }
         var on_resources_loaded = function () {
