--- a/www/index.html
+++ b/www/index.html
@@ -797,7 +797,7 @@
                     });
                 }.bind(this));
             }
-            else if(page != pages.RESET)
+            else
             {
                 window.location.hash = page;
             }
