--- a/www/index.html
+++ b/www/index.html
@@ -636,7 +636,14 @@
             var x = document.getElementById("menu");
             x.className = "topnav";
         }
-        GlobalState.prototype.show_page = function (page = pages.HOME, message = "", subtext = "", opt_out = true, completion_callback = function (popover) {state.hide_popover(popover); if(state.popovers.length == 0) { $("#belownav").fadeIn(1000.); $("#menu").fadeIn(1000.) }}) {
+
+        function is_popover(page) {
+            return page == pages.SERVER_ERROR ||
+                    page == pages.CLIENT_ERROR ||
+                    page == pages.PROCESSING;
+        }
+
+        GlobalState.prototype.show_page = function (page = pages.HOME, message = "", subtext = "", opt_out = true, completion_callback = function (popover) {state.hide_popover(popover); if(state.popovers.length == 0 && !is_popover(page)) { $("#belownav").fadeIn(1000.); $("#menu").fadeIn(1000.) }}) {
             this.collapse_nav();
             console.log("SHOWING PAGE: " + page);
 
