--- a/www/index.html
+++ b/www/index.html
@@ -638,6 +638,7 @@
         }
 
         function is_popover(page) {
+            console.log(page);
             return page == pages.SERVER_ERROR ||
                     page == pages.CLIENT_ERROR ||
                     page == pages.PROCESSING;
