--- a/www/index.html
+++ b/www/index.html
@@ -644,7 +644,7 @@
                     page == pages.PROCESSING;
         }
 
-        GlobalState.prototype.show_page = function (page = pages.HOME, message = "", subtext = "", opt_out = true, completion_callback = function (popover) {state.hide_popover(popover); if(state.popovers.length == 0 && !is_popover(page)) { $("#belownav").fadeIn(1000.); $("#menu").fadeIn(1000.) }}) {
+        GlobalState.prototype.show_page = function (page = pages.HOME, message = "", subtext = "", opt_out = true, completion_callback = function (popover) {state.hide_popover(popover); if(state.popovers.length == 0 && !is_popover(this.current_page)) { $("#belownav").fadeIn(1000.); $("#menu").fadeIn(1000.) }}) {
             this.collapse_nav();
             console.log("SHOWING PAGE: " + page);
 
@@ -803,6 +803,8 @@
             {
                 window.location.hash = page;
             }
+
+            this.current_page = page;
         }
         var on_resources_loaded = function () {
             console.log($)//Show me the money
