--- a/www/index.html
+++ b/www/index.html
@@ -377,19 +377,20 @@
         GlobalState.prototype.refresh_content = function (page) {
             switch (page) {
                 case pages.RECONNECT:
-                    if($("#menu").css("display") != "none")
                         $("#menu").fadeOut(1000);
                     $("#belownav").fadeIn(1000);
                     break;
                 case pages.PROCESSING:
+                        $("#menu").fadeOut(1000.);
                     break;
                 case pages.CLIENT_ERROR:
+                        $("#menu").fadeOut(1000.);
                     break;
                 case pages.SERVER_ERROR:
+                        $("#menu").fadeOut(1000.);
                     break;
                 case pages.RESET:
                     this.refresh_captchas();
-                    if($("#menu").css("display") != "none")
                         $("#menu").fadeOut(1000.);
                     $("#belownav").fadeIn(1000);
 
