--- a/www/index.html
+++ b/www/index.html
@@ -377,6 +377,7 @@
         GlobalState.prototype.refresh_content = function (page) {
             switch (page) {
                 case pages.RECONNECT:
+                    if($("#menu").css("display") != "none")
                         $("#menu").fadeOut(1000);
                     $("#belownav").fadeIn(1000);
                     break;
@@ -388,6 +389,7 @@
                     break;
                 case pages.RESET:
                     this.refresh_captchas();
+                    if($("#menu").css("display") != "none")
                         $("#menu").fadeOut(1000.);
                     $("#belownav").fadeIn(1000);
 
@@ -642,7 +644,7 @@
                     page == pages.PROCESSING;
         }
 
-        GlobalState.prototype.show_page = function (page = pages.HOME, message = "", subtext = "", opt_out = true, completion_callback = function (popover) {state.hide_popover(popover); if(state.popovers.length == 0 && !is_popover(state.current_page)) { $("#belownav").fadeIn(1000.); $("#menu").fadeIn(1000.) }}) {
+        GlobalState.prototype.show_page = function (page = pages.HOME, message = "", subtext = "", opt_out = true, completion_callback = function (popover) {state.hide_popover(popover); if(state.popovers.length == 0 && !is_popover(this.current_page)) { $("#belownav").fadeIn(1000.); $("#menu").fadeIn(1000.) }}) {
             this.collapse_nav();
             console.log("SHOWING PAGE: " + page);
             this.current_page = page;
