--- a/www/logout.html
+++ b/www/logout.html
@@ -2,9 +2,9 @@
     <div class="col-0 col-sm-0 col-md-1 col-lg-2">
     </div>
     <div class="col-12 col-sm-12 col-md-10 col-lg-8">
+        <div style="height: 20%;"></div>
         <h1 style=" padding:5%; text-align:center; color:#f00; font-size: 24px !important; width:auto; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;"
             class="blink-white">
-            <br>
             <div style="text-align:center; color:#f00; font-size: 24px !important;" class="blink-white">
                 This action will log you off by resetting the connection to the server!
             </div>
