--- a/www/index.html
+++ b/www/index.html
@@ -51,7 +51,7 @@
             <div class="bar"></div>
         </a>
     </div>
-    <div id="popovers" ></div>
+    <div id="popovers" style="height: 100%; width: 100%; position: absolute; text-align: center;"></div>
     <div id="belownav" onclick="state.collapse_nav();">
     </div>
     <!-- <div fixed id="iframeDiv"
