--- a/www/edit.html
+++ b/www/edit.html
@@ -1,4 +1,4 @@
-<div class="row connected_content" id="edit"
+<div class="row connected_content out-of-sight" id="edit"
     style="position:absolute; overflow: auto; width:100%; height: 100%;">
     <div class="split row left" style="text-align:center;">
         <div class="col-0 col-sm-0 col-md-0 col-lg-1">
