--- a/www/reconnect.html
+++ b/www/reconnect.html
@@ -1,4 +1,4 @@
-<div class="row disconnected_content" id="reconnect">
+<div class="row disconnected_content out-of-sight" id="reconnect">
     <div class="col-0 col-sm-0 col-md-1 col-lg-2">
     </div>
     <div class="col-12 col-sm-12 col-md-10 col-lg-8">
