--- a/www/reset.html
+++ b/www/reset.html
@@ -1,4 +1,4 @@
-<div class="row connected_content"
+<div class="row connected_content out-of-sight"
     style="margin: 0px !important; z-index: 20; position:absolute; text-align:center; border:none !important; width:100%;  overflow-y: auto;"
     id="reset">
     <div class="col-0 col-sm-0 col-md-1 col-lg-2">
