--- a/www/index.html
+++ b/www/index.html
@@ -35,16 +35,13 @@
 <body>
     <div id="menu" class="topnav" style="display:none !important;">
         <a id="home_button" href="#home">MetaHumanity.xyz</a>
-        <a id="browse_button" onclick="state.show_page(pages.BROWSE); ">Browse</a>
-        <a id="edit_button" onclick="state.show_page(pages.EDIT); ">Edit</a>
-        <a id="create_button" onclick="state.show_page(pages.CREATE); ">Create</a>
-        <a id="profile_button" class="logged_in_content" style="display: none"
-            onclick="state.show_page(pages.PROFILE);;">Profile</a>
-        <a id="login_button" class="logged_out_content" onclick="state.show_page(pages.LOGIN);">Login</a>
-        <a id="signup_button" class="logged_out_content" style="display: none"
-            onclick="state.show_page(pages.SIGNUP);">Sign Up</a>
-        <a id="logout_button" class="logged_in_content" style="display: none"
-            onclick="state.show_page(pages.LOGOUT);">Log Out</a>
+        <a id="browse_button" href="#browse" ">Browse</a>
+        <a id="edit_button" href="#edit">Edit</a>
+        <a id="create_button" href="#create">Create</a>
+        <a id="profile_button" class="logged_in_content" style="display: none" href="#profile">Profile</a>
+        <a id="login_button" class="logged_out_content" href="#login">Login</a>
+        <a id="signup_button" class="logged_out_content" style="display: none" href="#signup">Sign Up</a>
+        <a id="logout_button" class="logged_in_content" style="display: none" href="#logout">Log Out</a>
         <a href="javascript:void(0);" class="icon" onclick="state.toggle_nav()">
             <div class="bar"></div>
             <div class="bar"></div>
