--- a/www/index.html
+++ b/www/index.html
@@ -201,7 +201,7 @@
             this.websocket.onopen = function () {
                 if(this.first_connection)
                 {
-                   this.handle_navigation();
+                //    this.handle_navigation();
                    this.first_connection = false;
                 }
                 this.show_logged_out_content();
