--- a/www/index.html
+++ b/www/index.html
@@ -316,6 +316,8 @@
                         ]
                     }
                 };
+
+                this.set_ui_algorithm(default_create_algorithm);
                 this.show_page(pages.PROCESSING, "Connecting...", "Please be patient.", false);
                 this.connect();
             }.bind(this));
