--- a/www/index.html
+++ b/www/index.html
@@ -33,7 +33,7 @@
 </head>
 
 <body>
-    <div id="menu" class="topnav" style="display:none !important;">
+    <div id="menu" class="topnav" onclick="state.collapse_nav()" style="display:none !important;">
         <a id="home_button" href="#home">MetaHumanity.xyz</a>
         <a id="browse_button" href="#browse">Browse</a>
         <a id="edit_button" href="#edit">Edit</a>
