--- a/www/index.html
+++ b/www/index.html
@@ -1023,6 +1023,7 @@
                 window.location.hash = pages.HOME;
         }
         var pages_list = Object.values(pages);
+        var most_likely_page = "home";
         for (var i = 0; i < pages_list.length; i++) {
             if (!is_popover(pages_list[i])) {
                 var f = function (page) {
@@ -1030,10 +1031,19 @@
                         $('#belownav').append($(response));
                     }.bind(this));
                 }.bind(state);
-                var page = pages_list[i].substring(1) + '.html';
-                f(page);
+                var page_name = pages_list[i].substring(1);
+                f(page_name + '.html');
+                if(("#"+page_name) == windlow.location.hash)
+                {
+                    if(!is_popover(("#"+page_name)))
+                    {
+                        most_likely_page = page_name;
+                    }
+                }
             }
         }
+        
+        document.getElementById(most_likely_page+"_button").click();
     </script>
 </body>
 
