--- a/www/index.html
+++ b/www/index.html
@@ -1033,7 +1033,7 @@
                 }.bind(state);
                 var page_name = pages_list[i].substring(1);
                 f(page_name + '.html');
-                if(("#"+page_name) == windlow.location.hash)
+                if(("#"+page_name) == window.location.hash)
                 {
                     if(!is_popover(("#"+page_name)))
                     {
