--- a/www/index.html
+++ b/www/index.html
@@ -956,6 +956,7 @@
             else {
                 window.location.hash = page;
             }
+            this.refresh_content();
         }
         var on_resources_loaded = function () {
             console.log($)//Show me the money
