--- a/www/index.html
+++ b/www/index.html
@@ -1037,9 +1037,9 @@
             }
         }
         window.onload = function () {
-            on_resources_loaded();
-            document.getElementById(most_likely_page+"_button").click();
+            // document.getElementById(most_likely_page+"_button").click();
         }
+        on_resources_loaded();
     </script>
 </body>
 
