--- a/www/index.html
+++ b/www/index.html
@@ -922,6 +922,8 @@
             else {
                 window.location.hash = page;
                 this.refresh_content();
+                $("#menu").fadeIn(1000.);
+                $("#belownav").fadeIn(1000);
             }
         }
         var on_resources_loaded = function () {
