--- a/www/index.html
+++ b/www/index.html
@@ -922,7 +922,8 @@
             else {
                 window.location.hash = page;
                 this.refresh_content();
-                $("#menu").fadeIn(1000.);
+                if(page != pages.RECONNECT)
+                    $("#menu").fadeIn(1000.);
                 $("#belownav").fadeIn(1000);
             }
         }
