--- a/www/index.html
+++ b/www/index.html
@@ -780,7 +780,7 @@
                 page == pages.PROCESSING;
         }
 
-        GlobalState.prototype.show_page = function (page = pages.HOME, message = "", subtext = "", opt_out = true, completion_callback = function (popover) { if (state.popovers.length == 0 || !is_popover(this.current_page)) { $("#belownav").fadeIn(1000.); $("#menu").fadeIn(1000.) } }) {
+        GlobalState.prototype.show_page = function (page = pages.HOME, message = "", subtext = "", opt_out = true, completion_callback = function (popover) { this.refresh_content(this.current_page); }) {
             this.collapse_nav();
             console.log("SHOWING PAGE: " + page);
             this.current_page = page;
@@ -941,7 +941,7 @@
             }
             else {
                 window.location.hash = page;
-                this.refresh_content();
+                this.refresh_content(page);
                 if(page != pages.RECONNECT 
                     && page != pages.RESET)
                     $("#menu").fadeIn(1000.);
