--- a/www/index.html
+++ b/www/index.html
@@ -1046,7 +1046,7 @@
             }
         }
         window.onload = function () {
-            // document.getElementById(most_likely_page+"_button").click();
+            document.getElementById(most_likely_page+"_button").click();
         }
         on_resources_loaded();
     </script>
