--- a/www/index.html
+++ b/www/index.html
@@ -1046,7 +1046,7 @@
             }
         }
         window.onload = function () {
-            document.getElementById(most_likely_page+"_button").click();
+            state.show_page("#"+most_likely_page)
         }
         on_resources_loaded();
     </script>
