--- a/www/index.html
+++ b/www/index.html
@@ -418,8 +418,9 @@
                 this.hash = proto.auth.hash;
             }
             else if (proto.type == Message.Type.SET_PASSWORD) {
+                this.hide_popovers();
                 this.show_page(pages.PROCESSING, proto.message, proto.details, true, function (popover) {
-                    this.show_page(pages.RESET);
+                    this.show_page(pages.RESET);    
                 }.bind(this));
             }
             else if (proto.type == Message.Type.HALT) {
